# graph-mpc

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
algorithms/: pi_k.h  pi_m.h  pi_r.h
benchmarks/: CMakeLists.txt  benchmark.h  benchmark_bfs.cpp  benchmark_bfs_processor.cpp  benchmark_double_shuffle.cpp  benchmark_pi_k.cpp  benchmark_pi_m.cpp  benchmark_pi_r.cpp  benchmark_sharing.cpp  benchmark_shuffle.cpp  benchmark_sort.cpp  benchmark_sorting.cpp
certs/: cert1.csr  cert1.pem  cert2.csr  cert2.pem  cert3.csr  cert3.pem  cert_ca.pem  cert_ca.srl  cert_client_1.csr  cert_client_1.pem  cert_client_2.csr  cert_client_2.pem  cert_client_2_ext.cnf  cert_client_3.csr  cert_client_3.pem  generate.sh  key1.pem  key2.pem  key3.pem  key_ca.pem  key_client_1.pem  key_client_2.pem  key_client_3.pem
cmake/: FindGMP.cmake  FindNTL.cmake
config/: args_C0.conf  args_C1.conf  args_D.conf  args_P0.conf  args_P1.conf
example_graphs/pi_k/: subgraph_0.data  subgraph_1.data
example_graphs/pi_m/: subgraph_0.data  subgraph_1.data
scripts/macos/: benchmark_bfs.sh  benchmark_double_shuffle.sh  benchmark_pi_k.sh  benchmark_pi_m.sh  benchmark_pi_m_p0_p1.sh  benchmark_sharing.sh  benchmark_shuffle.sh  benchmark_sort.sh  test_all.sh  test_bfs.sh  test_eqz.sh  test_eqz_dealer_p0.sh  test_eqz_dealer_p1.sh  test_eqz_p0_p1.sh  test_network_dealer_p1.sh  test_pi_k.sh  test_pi_k_dealer_p0.sh  test_pi_k_dealer_p1.sh  test_pi_m.sh  test_sharing.sh  test_sharing_p1.sh  test_shuffle_dealer_p0.sh  test_shuffle_dealer_p1.sh  test_shuffle_p0_p1.sh  test_sort.sh  test_sort_dealer_p0.sh  test_sort_dealer_p1.sh
scripts/ubuntu/: test_all.sh  test_shuffle.sh
setup/: comm.h  setup.cpp  setup.h  utils.cpp  utils.h
setup/input-sharing/: input_client.h  input_server.h  launch_client.cpp
src/: CMakeLists.txt  add_share.h  compaction.cpp  compaction.h  graph.h  main.cpp  message_passing.cpp  message_passing.h  mp_protocol.h  perm.h  processor.cpp  processor.h  protocol_def.cpp  protocol_def.h  random_generators.cpp  random_generators.h  sharing.cpp  sharing.h  shuffle.cpp  shuffle.h  shuffle_new.h  sorting.cpp  sorting.h
src/examples/: pi_k.h  pi_m.h  pi_r.h
src/graph/: edge.h  graph.h  node.h
src/graphmpc/: add.h  add_weights.h  bit2a.h  circuit.cpp  circuit.h  clip.cpp  clip.h  compaction.cpp  compaction.h  construct_payload.h  deduplication.cpp  deduplication.h  equals_zero.h  evaluator.cpp  evaluator.h  flip.h  function.h  gate.cpp  gate.h  gather.h  merged_shuffle.h  message_passing.cpp  message_passing.h  mp_protocol.cpp  mp_protocol.h  mul.cpp  mul.h  permute.h  preprocessor.cpp  preprocessor.h  propagate.h  reveal.h  shuffle.cpp  shuffle.h  shuffle_repeat.h  sort.cpp  sort.h  storage.cpp  storage.h  unshuffle.h  (+1 more)
src/input-sharing/: input_client.h  input_server.h
src/io/: buffers.h  comm.h  disk.h  netmp.h  network_interface.cpp  network_interface.h
src/prng/: csprng.cpp
src/prng/duthomhas/: csprng.hpp
src/protocol/: clip.cpp  clip.h  compaction.cpp  compaction.h  deduplication.cpp  deduplication.h  message_passing.cpp  message_passing.h  permute.cpp  permute.h  shuffle.cpp  shuffle.h  shuffle_optional.cpp  sort.cpp  sort.h  sorting.cpp  sorting.h
src/setup/: cmdline.cpp  cmdline.h  configs.h
src/setup/input-sharing/: input_client.h  input_server.h  launch_client.cpp
src/shuffle_old/: shuffle.cpp  shuffle.h
src/utils/: bits.h  comm.h  graph.h  mul.cpp  mul.h  perm.h  permutation.h  preprocessings.h  random_generators.cpp  random_generators.h  sharing.cpp  sharing.h  shuffle_preproc.h  stats.cpp  stats.h  structs.h  types.h
tests/: CMakeLists.txt  constants.h  test.h  test_bfs.cpp  test_deduplication.cpp  test_disk.cpp  test_eqz.cpp  test_mp.cpp  test_network.cpp  test_perm.cpp  test_pi_k.cpp  test_pi_m.cpp  test_pi_m_clients.cpp  test_pi_r.cpp  test_processor.cpp  test_sharing.cpp  test_shuffle.cpp  test_shuffle_old.cpp  test_socket.cpp  test_sort.cpp  test_sw_perm.cpp
tests/test_bfs/: CMakeLists.txt  test_bfs.cpp
tests/test_graph/: CMakeLists.txt  test_graph.cpp
tests/test_mp/: test_mp.cpp
tests/test_perm/: CMakeLists.txt  main.cpp
tests/test_sharing/: CMakeLists.txt  test_sharing.cpp
tests/test_shuffle/: CMakeLists.txt  main.cpp  test_shuffle.cpp
tests/test_shuffle_new/: CMakeLists.txt  test_shuffle_new.cpp
tests/test_sort/: CMakeLists.txt  test_sort.cpp
tests/test_sw_perm/: CMakeLists.txt  test_sw_perm.cpp
